# adventofcode

./: .eslintrc.cjs  .flake8  .gitignore  package.json  pyproject.toml  tsconfig.json
2021/typescript/: 01.ts  02.ts  03.ts
2022/go/: 01.go  02.go  03.go  04.go  05.go
2022/python/: 16.py  20.py
2022/typescript/: 01.ts  02.ts  03.ts  04.ts  05.ts  06.ts  07.ts  08.ts  09.ts  10.ts  11.ts  12.ts  13.ts  14.ts  15.ts  16.ts  17.ts  18.ts  19.ts  20.ts  21.ts
go/2022/01/: 01.go
go/2022/02/: 02.go
go/2022/03/: 03.go
go/2022/04/: 04.go
go/2022/05/: 05.go
go/2022/06/: 06.go
go/2023/01/: 01.go
go/2023/02/: 02.go
go/2023/03/: 03.go
go/2023/04/: 04.go
go/2023/05/: 05.go
go/2023/06/: 06.go
go/2023/07/: 07.go
python/: .gitignore  pyproject.toml
python/2022/: 16.py  20.py
ruby/: .rubocop.yml
ruby/2025/: 01.rb
typescript/: .eslintrc.cjs  eslint.config.mjs  package.json  prettier.config.mjs
typescript/2021/: 01.ts  02.ts  03.ts
typescript/2022/: 01.ts  02.ts  03.ts  04.ts  05.ts  06.ts  07.ts  08.ts  09.ts  10.ts  11.ts  12.ts  13.ts  14.ts  15.ts  16.ts  17.ts  18.ts  19.ts  20.ts  21.ts
typescript/2024/: 01.ts
