[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code solutions"
authors = ["Ralin Chimev"]

[tool.poetry.dependencies]
python = "3.11.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"

[tool.black]
line-length = 120

[tool.isort]
atomic = true
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
order_by_type = true
case_sensitive = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
